--- a/src/urc_intelsys_2024_msgs/package.xml
+++ b/src/urc_intelsys_2024_msgs/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="chrehall68@gmail.com">eliot</maintainer>
   <license>Apache-2.0</license>
 
+  <exec_depend>std_msgs</exec_depend>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
