--- a/src/gps/package.xml
+++ b/src/gps/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>urc_intelsys_2024</name>
+  <name>gps</name>
   <version>0.0.0</version>
-  <description>URC Intelsys 2024 Launch Files</description>
+  <description>URC Intelsys 2024 GPS</description>
   <maintainer email="christopher.e.hall@sjsu.edu">SJSU Robotics Team</maintainer>
   <license>Apache-2.0</license>
 
@@ -11,12 +11,6 @@
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>ros2launch</exec_depend>
-  <exec_depend>python3-adafruit-blinka-pip</exec_depend>
-  <exec_depend>urc_intelsys_2024_msgs</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
