--- a/src/urc_intelsys_2024_msgs/package.xml
+++ b/src/urc_intelsys_2024_msgs/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>urc_intelsys_2024_msgs</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="chrehall68@gmail.com">eliot</maintainer>
+  <description>URC Intelsys 2024 Messages</description>
+  <maintainer email="christopher.e.hall@sjsu.edu">SJSU Robotics Team</maintainer>
   <license>Apache-2.0</license>
 
   <exec_depend>std_msgs</exec_depend>
