--- a/src/urc_intelsys_2024/package.xml
+++ b/src/urc_intelsys_2024/package.xml
@@ -15,7 +15,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
-  <exec_depend>python3-adafruit-blinka-pip</exec_depend>
+  <!-- <exec_depend>python3-adafruit-blinka-pip</exec_depend> -->
   <exec_depend>urc_intelsys_2024_msgs</exec_depend>
   <exec_depend>depthai-ros</exec_depend>
   <exec_depend>depthai_ros_driver</exec_depend>
