implemented gnss to cartesian coordinate conversion

--- a/src/urc_intelsys_2024_msgs/CMakeLists.txt
+++ b/src/urc_intelsys_2024_msgs/CMakeLists.txt
@@ -27,6 +27,7 @@ endif()
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/CART.msg"
   "msg/GPS.msg"
   "msg/GPSNavDetails.msg"
   "msg/ObjectNavDetails.msg"
