--- a/src/urc_intelsys_2024/config/config.yaml
+++ b/src/urc_intelsys_2024/config/config.yaml
@@ -6,3 +6,7 @@ gps:
   ros__parameters:
     gps_publish_seconds: 2.0
     gps_type: fake
+geo_to_cart:
+  ros__parameters:
+    ref_latitude: 90
+    ref_longitude: 90
