made geo_to_cart a service.
Co-authored-by: Eliot Hall <chrehall68@users.noreply.github.com>

--- a/src/urc_intelsys_2024_msgs/CMakeLists.txt
+++ b/src/urc_intelsys_2024_msgs/CMakeLists.txt
@@ -37,6 +37,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/TGPSNavDetails.msg"
   "msg/TPolarCoordinate.msg"
   "msg/TTask.msg"
+  "srv/GeoToCart.srv"
 
   DEPENDENCIES std_msgs
 )
