--- a/src/obstacle_detection/package.xml
+++ b/src/obstacle_detection/package.xml
@@ -13,7 +13,7 @@
   <depend>geometry_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>std_msgs</depend>
-  <depend>openvino</depend>
+  <!-- <depend>openvino</depend> -->
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
