--- a/src/obstacle_detection/package.xml
+++ b/src/obstacle_detection/package.xml
@@ -13,6 +13,9 @@
   <depend>geometry_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>std_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>urc_intelsys_2024_msgs</depend>
+  <depend>constants</depend>
   <!-- <depend>openvino</depend> -->
   
   <test_depend>ament_copyright</test_depend>
