--- a/src/urc_intelsys_2024/config/config.yaml
+++ b/src/urc_intelsys_2024/config/config.yaml
@@ -6,7 +6,7 @@ gps:
   ros__parameters:
     gps_publish_seconds: 2.0
     gps_type: actual
-geo_to_cart:
+geo_to_cart_handler:
   ros__parameters:
     ref_latitude: 37.33678616666667
     ref_longitude: -121.88098083333334
